--- a/doc/library.bib
+++ b/doc/library.bib
@@ -1,7 +1,7 @@
 @BOOK{Hamblen,
 	AUTHOR = {Hamblen, James O. AND Hall, Tyson S. AND Furman, Michael D.},
 	YEAR = {2008},
-	TITLE = {Rapid Prototyping of Digital Systems - },
+	TITLE = {Rapid Prototyping of Digital Systems},
 	EDITION = {1. Aufl.},
 	ISBN = {978-0-387-72670-0},
 	PUBLISHER = {Springer Science},
