--- a/doc/Dokumentation.tex
+++ b/doc/Dokumentation.tex
@@ -179,29 +179,84 @@ speziellen \emph{entity/architecture}-Kombinationen die Funktionalität der Plat
 \index{Checkliste Systementwurf}
 Basierend auf dem Daten-Steuerpfad-Modell lässt sich Folgende Checkliste aufstellen.
 \begin{itemize}
-	\item 	Identifizieren der Eingangs- und Ausgangssignale des Systems auf einem Blatt Papier
-  			(Eingänge von links, Ausgänge nach rechts)
-	\item 	Analyse der Timing-Randbedingungen:
-  			In welcher zeitlichen Reihenfolge müssen Eingangs- und Ausgangssignale eintreffen bzw. 
-  			generiert werden, um die einzelnen Funktionen des Systems zu realisieren?
-	\item 	Systempartitionierung des Datenpfads:
-  			Welche Komponenten sind zur Lösung von Teilaufgaben geeignet?
-	\item 	Analyse der Datenpfadkomponenten
+	\item[1.] 	Identifizieren der Eingangs- und Ausgangssignale des Systems auf einem Blatt Papier
+  				(Eingänge von links, Ausgänge nach rechts)
+	\item[2.]	Analyse der Timing-Randbedingungen:
+  				In welcher zeitlichen Reihenfolge müssen Eingangs- und Ausgangssignale eintreffen bzw. 
+  				generiert werden, um die einzelnen Funktionen des Systems zu realisieren?
+	\item[3.] 	Systempartitionierung des Datenpfads:
+  				Welche Komponenten sind zur Lösung von Teilaufgaben geeignet?
+	\item[4.] 	Analyse der Datenpfadkomponenten
   		\begin{itemize}
-  			\item	Blockdiagramm für den Datenpfad:
-					Eine Liste mit erforderlichen lokalen Datenpfadsignalen.
-			\item	Welche Funktionsblöcke sind taksynchron und welche kombinatorisch?
-			\item 	Welche synchronen Komponenten benötigen einen synchronen/asynchronen Reset/Preset?
-			\item 	Analyse aller Datenpfadkomponenten:
-					Welche Steuersignale sind für die verschiedenen Teilfunktionen erforderlich?
-					Welche Statussignale werden erzeugt?
-					Eintragung dieser in die Signalliste und ergänzen des Blockdiagramms.
-			\item	Ergänzung der Datenpfadkomponenten im Blockdiagramm durch eine entsprechende
-					Abhängigkeitsnotation. 
+  			\item[4.1]	Blockdiagramm für den Datenpfad:
+						Eine Liste mit erforderlichen lokalen Datenpfadsignalen.
+			\item[4.2]	Welche Funktionsblöcke sind taksynchron und welche kombinatorisch?
+			\item[4.3] 	Welche synchronen Komponenten benötigen einen synchronen/asynchronen Reset/Preset?
+			\item[4.4] 	Analyse aller Datenpfadkomponenten:
+						Welche Steuersignale sind für die verschiedenen Teilfunktionen erforderlich?
+						Welche Statussignale werden erzeugt?
+						Eintragung dieser in die Signalliste und ergänzen des Blockdiagramms.
+			\item[4.5]	Ergänzung der Datenpfadkomponenten im Blockdiagramm durch eine entsprechende
+						Abhängigkeitsnotation. 
   		\end{itemize}
-	\item	Ergänzen des Blockdiagramms durch einen Zustandsautomaten für den Steuerpfad. Zunächst
-			reicht ein Funktionsblock, welcher später im VDHL-Code durch zwei Prozeße modelliert wird. 
+	\item[5.]	Ergänzen des Blockdiagramms durch einen Zustandsautomaten für den Steuerpfad. Zunächst
+				reicht ein Funktionsblock, welcher später im VDHL-Code durch zwei Prozeße modelliert wird.
+	\item[5.1]	Welche externen und internen (lokalen) Datensignale steuern den Zustandsautomaten?
+			 	Eintragen dieser in das Blockdiagramm und ergänzen der Signalliste.
+	\item[5.2]	Sicherstellen das der Automat alle intern erforderlichen Steuersignale für den Datenpfad,
+				sowie alle externen Steuersignale erzeugt.
+	\item[5.3]	Festlegen der Automatenzustände (schriftlich):
+				Wieviele Zustände?
+				Welche Namen?
+				Welche Funktion?
+	\item[5.4]	Analysieren, welche Steuersignale Mealy- bzw. Moore-Charakter haben sollen.
+	\item[5.5]	Zeichnen eines Zustandsdiagramms auf Basis der Datenpfadarchitektur und des zuvor 
+				analysierten Timings für die verschiedenen Systemfunktionen. Sind abstrakte Bedingungen
+				erforderlich, so ist dies ein Zeichen dafür, dass die Strukturierung des Datenpfads
+				noch nicht detailiert genug ist.
+	\item[5.6]	Prüfen der Vollständigkeit des Zustandsdiagramms:
+		\begin{itemize}
+			\item	Welches ist der Reset Zustand?
+			\item 	Gibt es Zustände aus denen der Automat nicht mehr heraus kommt?
+			\item 	Werden alle Kobinationen der Eingangssignale im Zustandsdiagramm berücksichtigt?
+			\item 	Gibt es in allen Zuständen für alle Ausgangssignale eine Wertzuweisung?
+					Welche Signalwerte eignen sich ggf. als Dafault im VHDL-Code?
+		\end{itemize}
+	 \item[6.]		Schreiben einer VHDL-entity unter Berücksichtigung aller im Blockdiagramm
+	 				definierten Schnittstellensignale.
+	 \item[7.]		Schreiben der architecture wie folg:
+	 	\begin{itemize}
+	 	  	\item[7.1]	Deklaration aller lokalen Signale der zuvor erstellten Signalliste. 
+	 	  				Überlegungen, welcher Signaltyp verwendet werden soll.
+	 	  	\item[7.2]	Deklaration jeweils eines Prozeßes und Entnahme aus dem Blockdiagramm, welche
+	 	  				Datenpfadsignale erzeugt werden sollen.
+	 	   	\item[7.3]	Erstellen zweier Prozeße für den Zustandsautomaten:
+	 	   				hiervon muss ein Prozeß getaktet sein und einen in der Regel asynchronen
+	 	   				Reset besitzen. Der andere Prozeß ist Kombinatorisch und erzeugt das
+	 	   				Folgezustandsignal sowie in der Regel alle steuersignale.
+	 	   	\item[7.4]	Ergänzen aller Prozeße durch ihre Empfindlichkeitslisten:
+	 	   		\begin{itemize}
+	 	   			\item	Bei kombinatorischen Prozeßen: Alle Eingangs- und Entscheidungssignale
+	 	   			\item 	Bei taktsynchronen Prozeßen: Nur Systemtakt, sowie ggf. vorhandenen Reset
+	 	   		\end{itemize}
+	 	   	\item[7.5]	Ergänzen aller sequentieller Anweisungen, die die individuelle Funktion des
+	 	   				Prozeßes beschreiben.
+	 	\end{itemize}
 \end{itemize}
+
+\section{Umsetzung der Checkpunkte}
+\index{Umsetzung Checkpunkte}
+\texttt{Identifizieren der Eingangs- und Ausgangssignale des Systems auf einem Blatt Papier (Eingänge von links, Ausgänge nach rechts)}
+
+Aufgrund dieser Forderung ließ sich Folgende Grafik erstellen:
+\begin{figure}[here]
+	\begin{center}
+		\includegraphics[width=0.65 \textwidth]{includes/TopEntity.eps}
+		\caption[Eingangs- und Ausgangssignale des Systems]{Eingangs- und Ausgangssignale des Systems}
+		\label{fig:Eingangs- und Ausgangssignale des Systems}
+	\end{center}
+\end{figure}
+
 
 \newpage
 \bibliography{library}
